Fix z-index of map editing tools.

--- a/server/client/dungeon.css
+++ b/server/client/dungeon.css
@@ -389,6 +389,11 @@ body {
   position: absolute;
 }
 
+#map-tiles,
+#map-functions {
+  z-index: 2;
+}
+
 #map-tiles {
   bottom: 5px;
   left: 5px;
